--- a/www/jade_template/life.template.main.jade
+++ b/www/jade_template/life.template.main.jade
@@ -53,7 +53,8 @@ ion-view(title="首页")
 				span.gray.font-size-12.padding-horizontal &nbsp;&nbsp;{{store.distance}}公里
 			ion-item.item-thumbnail-left(
 				ng-repeat="product in store.products",
-				ng-show="store.products.length")
+				ng-show="store.products.length",
+				ng-click="gotoUrl('#/productDetail/{{store.id}}/{{product.id}}')")
 				img(ng-src="{{product.img}}")
 				h3 {{product.name}}
 				.row.marging-top
